# django-ecommerce-api

./: .buildinfo  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE.txt  README.md  USAGE.md  changes.html  contributing.html  genindex.html  getting_started.html  index.html  license.html  models.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  usage.html
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
_sources/: index.rst.txt
_sources/api/: ecommerce.core.management.commands.rst.txt  ecommerce.core.rst.txt  ecommerce.users.tests.rst.txt
api/: ecommerce.contrib.html  ecommerce.contrib.sites.html  ecommerce.contrib.sites.migrations.html  ecommerce.core.html  ecommerce.core.management.commands.html  ecommerce.core.management.html  ecommerce.html  ecommerce.products.html  ecommerce.products.migrations.html  ecommerce.products.tests.html  ecommerce.users.html  ecommerce.users.migrations.html  ecommerce.users.tests.html  ecommerce.utils.html  modules.html
config/: api_router.py  asgi.py  urls.py  wsgi.py
config/settings/: base.py  local.py  production.py  test.py
docs/: Makefile  conf.py  models.rst
docs/api/: ecommerce.contrib.rst  ecommerce.contrib.sites.migrations.rst  ecommerce.contrib.sites.rst  ecommerce.core.management.rst  ecommerce.products.migrations.rst  ecommerce.products.rst  ecommerce.products.tests.rst  ecommerce.rst  ecommerce.users.migrations.rst  ecommerce.users.rst  ecommerce.utils.rst  modules.rst
ecommerce/: conftest.py
ecommerce/contrib/sites/migrations/: 0003_set_site_domain_and_name.py
ecommerce/core/management/commands/: populate_db.py
ecommerce/products/: admin.py  apps.py  models.py
ecommerce/products/api/: serializers.py  views.py
ecommerce/products/migrations/: 0001_initial.py  0002_alter_productline_sku.py
ecommerce/products/tests/: factories.py  test_admin.py  test_models.py
ecommerce/products/tests/api/: test_endpoints.py  test_urls.py  test_views.py
ecommerce/templates/: base.html
ecommerce/users/: admin.py  models.py
ecommerce/users/api/: serializers.py  views.py
ecommerce/users/migrations/: 0001_initial.py  0002_userprofile_remove_user_name.py
ecommerce/users/tests/: factories.py  test_admin.py  test_api_urls.py  test_api_views.py  test_forms.py  test_models.py  test_swagger.py
ecommerce/utils/: admin.py  factories.py  permissions.py  serializer.py
ecommerce/utils/tests/: test_permissions.py
